# car_game

./: README.md
game temp/: CMakeLists.txt  main.cpp  race_track.txt  todo.txt
game temp/core/: CarController.cpp  CarController.h  CollisionManager.cpp  CollisionManager.h  Controller.cpp  Controller.h  Game.cpp  Game.h  Input.cpp  Input.h
game temp/entities/: Car.cpp  Car.h  Tile.cpp  Tile.h
game temp/enums/: TileTypes.h  TurnTypes.h
game temp/ui/: CarRenderer.cpp  CarRenderer.h  HUD.cpp  HUD.h  MapRenderer.cpp  MapRenderer.h  Renderer.cpp  Renderer.h  SpeedoMeter.cpp  SpeedoMeter.h
game temp/world/: LapTimer.cpp  LapTimer.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h
